--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,41 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+@keyframes slideIn {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideButtonLeft {
+  0% {
+    transform: translateX(50px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideButtonRight {
+  0% {
+    transform: translateX(-50px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.menu-mobile {
+  animation: slideIn 0.5s ease-out;
+}
+
+.menu-item-left {
+  animation: slideButtonLeft 0.5s ease-out;
+}
+
+.menu-item-right {
+  animation: slideButtonRight 0.5s ease-out;
+}
